[project]
name = "phopymatlabconverter"
version = "0.2.0"
description = ""
authors = [{ name = "Pho Hale", email = "PhoHale@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "h5py>=3.11.0,<4",
    "hdf5storage>=0.1.19,<0.2",
    "matplotlib>=3.8.4,<4",
    "pandas>=2.2.2,<3",
    "pathlib>=1.0.1,<2",
    "qtpy>=2.4.1,<3",
    "pyqt6>=6.7.0,<7",
    "setuptools>=69.5.1,<70",
    "ipykernel>=6.29.4,<7",
    "ipython>=8.24.0,<9",
    "scipy>=1.13.0,<2",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
